# url-shortener

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
migrations/: 20230519123321_init.down.sql  20230519123321_init.up.sql
src/: config.rs  db.rs  lib.rs  main.rs  routes.rs  shortener.rs
tests/: test_routes.rs
tests/fixtures/: hits.sql  urls.sql
