[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
axum-macros = "0.3.7"
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = { version = "0.4.24", features = ["serde"] }
digest = "0.10.6"
envy = "0.4.2"
hyper = "0.14.26"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.3.1"
